Rename cdc propety prefix to debezium and cdc.debezium to debezium.inner

--- a/applications/source/debezium-source/README.adoc
+++ b/applications/source/debezium-source/README.adoc
@@ -8,8 +8,8 @@ NOTE: This source can be used with *any* Spring Cloud  Stream message binder.
 It is not restricted nor depended on the Kafka Connect framework. Though this approach is flexible it comes with certain https://debezium.io/documentation/reference/2.1/development/engine.html#_handling_failures[limitations].
 
 All Debezium configuration properties are supported.
-Just precede any Debezium properties with the `cdc.debezium.` prefix.
-For example to set the Debezium's `connector.class` property use the `cdc.debezium.connector.class` source property instead.
+Just precede any Debezium properties with the `debezium.inner.` prefix.
+For example to set the Debezium's `connector.class` property use the `debezium.inner.connector.class` source property instead.
 
 == Database Support
 
@@ -18,10 +18,10 @@ The `Debezium Source` currently supports CDC for multiple datastores: https://de
 == Options
 
 //tag::configuration-properties[]
-$$cdc.copy-headers$$:: $$Copy Change Event headers into Message headers.$$ *($$Boolean$$, default: `$$true$$`)*
-$$cdc.debezium$$:: $$Spring pass-trough wrapper for debezium configuration properties. All properties with a 'cdc.debezium.' prefix are native Debezium properties. The prefix is removed, converting them into Debezium io.debezium.config.Configuration.$$ *($$Map<String, String>$$, default: `$$<none>$$`)*
-$$cdc.format$$:: $$Change Event message content format. Defaults to 'JSON'.$$ *($$DebeziumFormat$$, default: `$$<none>$$`, possible values: `JSON`,`AVRO`,`PROTOBUF`)*
-$$cdc.offset-commit-policy$$:: $$The policy that defines when the offsets should be committed to offset storage.$$ *($$DebeziumOffsetCommitPolicy$$, default: `$$<none>$$`, possible values: `ALWAYS`,`PERIODIC`,`DEFAULT`)*
+$$debezium.copy-headers$$:: $$Copy Change Event headers into Message headers.$$ *($$Boolean$$, default: `$$true$$`)*
+$$debezium.format$$:: $$Change Event message content format. Defaults to 'JSON'.$$ *($$DebeziumFormat$$, default: `$$<none>$$`, possible values: `JSON`,`AVRO`,`PROTOBUF`)*
+$$debezium.inner$$:: $$Spring pass-trough wrapper for debezium configuration properties. All properties with a 'debezium.inner.*' prefix are native Debezium properties.$$ *($$Map<String, String>$$, default: `$$<none>$$`)*
+$$debezium.offset-commit-policy$$:: $$The policy that defines when the offsets should be committed to offset storage.$$ *($$DebeziumOffsetCommitPolicy$$, default: `$$<none>$$`, possible values: `ALWAYS`,`PERIODIC`,`DEFAULT`)*
 //end::configuration-properties[]
 
 ==== Event flattening configuration
@@ -34,11 +34,11 @@ Using the https://debezium.io/documentation/reference/stable/transformations/eve
 
 [source, bash]
 ----
---cdc.debezium.transforms=unwrap
---cdc.debezium.transforms.unwrap.type=io.debezium.transforms.ExtractNewRecordState
---cdc.debezium.transforms.unwrap.drop.tombstones=false
---cdc.debezium.transforms.unwrap.delete.handling.mode=rewrite
---cdc.debezium.transforms.unwrap.add.fields=name,db
+--debezium.inner.transforms=unwrap
+--debezium.inner.transforms.unwrap.type=io.debezium.transforms.ExtractNewRecordState
+--debezium.inner.transforms.unwrap.drop.tombstones=false
+--debezium.inner.transforms.unwrap.delete.handling.mode=rewrite
+--debezium.inner.transforms.unwrap.add.fields=name,db
 ----
 
 NOTE: The `add.headers` and `add.headers.prefix` are not supported.
@@ -47,7 +47,7 @@ NOTE: The `add.headers` and `add.headers.prefix` are not supported.
 ==== Connectors properties
 
 The table below lists all available Debezium properties for each connecter.
-Those properties can be used by prefixing them by the `cdc.debezium.` prefix.
+Those properties can be used by prefixing them by the `debezium.inner.` prefix.
 
 .Table of the configuration properties for every Debezium connector.
 |===
@@ -113,31 +113,31 @@ Use following properties to connect the Debezium Source to MySQL DB:
 
 [source,properties]
 ----
-cdc.debezium.connector.class=io.debezium.connector.mysql.MySqlConnector # <1>
+debezium.inner.connector.class=io.debezium.connector.mysql.MySqlConnector # <1>
 
-cdc.debezium.topic.prefix=my-topic # <2>
-cdc.debezium.name=my-connector # <2>
-cdc.debezium.database.server.id=85744 # <2>
-cdc.debezium.database.server.name=my-app-connector # <2>
+debezium.inner.topic.prefix=my-topic # <2>
+debezium.inner.name=my-connector # <2>
+debezium.inner.database.server.id=85744 # <2>
+debezium.inner.database.server.name=my-app-connector # <2>
 
-cdc.debezium.database.user=debezium # <3>
-cdc.debezium.database.password=dbz # <3>
-cdc.debezium.database.hostname=localhost # <3>
-cdc.debezium.database.port=3306 # <3>
+debezium.inner.database.user=debezium # <3>
+debezium.inner.database.password=dbz # <3>
+debezium.inner.database.hostname=localhost # <3>
+debezium.inner.database.port=3306 # <3>
 
-cdc.debezium.schema=true # <4>
-cdc.debezium.key.converter.schemas.enable=true # <4>
-cdc.debezium.value.converter.schemas.enable=true # <4>
+debezium.inner.schema=true # <4>
+debezium.inner.key.converter.schemas.enable=true # <4>
+debezium.inner.value.converter.schemas.enable=true # <4>
 
-cdc.debezium.transforms=unwrap # <5>
-cdc.debezium.transforms.unwrap.type=io.debezium.transforms.ExtractNewRecordState # <5>
-cdc.debezium.transforms.unwrap.add.fields=name,db # <5>
-cdc.debezium.transforms.unwrap.delete.handling.mode=none # <5>
-cdc.debezium.transforms.unwrap.drop.tombstones=true # <5>
+debezium.inner.transforms=unwrap # <5>
+debezium.inner.transforms.unwrap.type=io.debezium.transforms.ExtractNewRecordState # <5>
+debezium.inner.transforms.unwrap.add.fields=name,db # <5>
+debezium.inner.transforms.unwrap.delete.handling.mode=none # <5>
+debezium.inner.transforms.unwrap.drop.tombstones=true # <5>
 
-cdc.debezium.database.history=io.debezium.relational.history.MemoryDatabaseHistory # <6>
-cdc.debezium.schema.history.internal=io.debezium.relational.history.MemorySchemaHistory # <6>
-cdc.debezium.offset.storage=org.apache.kafka.connect.storage.MemoryOffsetBackingStore # <6>
+debezium.inner.database.history=io.debezium.relational.history.MemoryDatabaseHistory # <6>
+debezium.inner.schema.history.internal=io.debezium.relational.history.MemorySchemaHistory # <6>
+debezium.inner.offset.storage=org.apache.kafka.connect.storage.MemoryOffsetBackingStore # <6>
 
 ----
 
@@ -168,32 +168,32 @@ Use following properties to connect the Debezium Source to PostgreSQL:
 
 [source,properties]
 ----
-cdc.debezium.connector.class=io.debezium.connector.postgresql.PostgresConnector # <1>
+debezium.inner.connector.class=io.debezium.connector.postgresql.PostgresConnector # <1>
 
-cdc.debezium.database.history=io.debezium.relational.history.MemoryDatabaseHistory # <2>
-cdc.debezium.schema.history.internal=io.debezium.relational.history.MemorySchemaHistory # <2>
-cdc.debezium.offset.storage=org.apache.kafka.connect.storage.MemoryOffsetBackingStore # <2>
+debezium.inner.database.history=io.debezium.relational.history.MemoryDatabaseHistory # <2>
+debezium.inner.schema.history.internal=io.debezium.relational.history.MemorySchemaHistory # <2>
+debezium.inner.offset.storage=org.apache.kafka.connect.storage.MemoryOffsetBackingStore # <2>
 
-cdc.debezium.topic.prefix=my-topic # <3>
-cdc.debezium.name=my-connector # <3>
-cdc.debezium.database.server.id=85744 # <3>
-cdc.debezium.database.server.name=my-app-connector # <3>
+debezium.inner.topic.prefix=my-topic # <3>
+debezium.inner.name=my-connector # <3>
+debezium.inner.database.server.id=85744 # <3>
+debezium.inner.database.server.name=my-app-connector # <3>
 
-cdc.debezium.database.user=postgres  # <4>
-cdc.debezium.database.password=postgres # <4>
-cdc.debezium.database..dbname=postgres # <4>
-cdc.debezium.database.hostname=localhost # <4>
-cdc.debezium.database.port=5432 # <4>
+debezium.inner.database.user=postgres  # <4>
+debezium.inner.database.password=postgres # <4>
+debezium.inner.database..dbname=postgres # <4>
+debezium.inner.database.hostname=localhost # <4>
+debezium.inner.database.port=5432 # <4>
 
-cdc.debezium.schema=true # <5>
-cdc.debezium.key.converter.schemas.enable=true # <5>
-cdc.debezium.value.converter.schemas.enable=true # <5>
+debezium.inner.schema=true # <5>
+debezium.inner.key.converter.schemas.enable=true # <5>
+debezium.inner.value.converter.schemas.enable=true # <5>
 
-cdc.debezium.transforms=unwrap # <6>
-cdc.debezium.transforms.unwrap.type=io.debezium.transforms.ExtractNewRecordState # <6>
-cdc.debezium.transforms.unwrap.add.fields=name,db # <6>
-cdc.debezium.transforms.unwrap.delete.handling.mode=none # <6>
-cdc.debezium.transforms.unwrap.drop.tombstones=true # <6>
+debezium.inner.transforms=unwrap # <6>
+debezium.inner.transforms.unwrap.type=io.debezium.transforms.ExtractNewRecordState # <6>
+debezium.inner.transforms.unwrap.add.fields=name,db # <6>
+debezium.inner.transforms.unwrap.delete.handling.mode=none # <6>
+debezium.inner.transforms.unwrap.drop.tombstones=true # <6>
 ----
 
 <1> Configures `Debezium Source` to use https://debezium.io/docs/connectors/postgresql/[PostgresConnector].
@@ -231,34 +231,34 @@ Use following properties to connect the Debezium Source to MongoDB:
 
 [source,properties]
 ----
-cdc.debezium.connector.class=io.debezium.connector.mongodb.MongodbSourceConnector # <1>
+debezium.inner.connector.class=io.debezium.connector.mongodb.MongodbSourceConnector # <1>
 
-cdc.debezium.topic.prefix=my-topic
-cdc.debezium.name=my-connector
-cdc.debezium.database.server.id=85744
-cdc.debezium.database.server.name=my-app-connector
+debezium.inner.topic.prefix=my-topic
+debezium.inner.name=my-connector
+debezium.inner.database.server.id=85744
+debezium.inner.database.server.name=my-app-connector
 
-cdc.debezium.database.history=io.debezium.relational.history.MemoryDatabaseHistory # <2>
-cdc.debezium.schema.history.internal=io.debezium.relational.history.MemorySchemaHistory # <2>
-cdc.debezium.offset.storage=org.apache.kafka.connect.storage.MemoryOffsetBackingStore # <2>
+debezium.inner.database.history=io.debezium.relational.history.MemoryDatabaseHistory # <2>
+debezium.inner.schema.history.internal=io.debezium.relational.history.MemorySchemaHistory # <2>
+debezium.inner.offset.storage=org.apache.kafka.connect.storage.MemoryOffsetBackingStore # <2>
 
-cdc.debezium.mongodb.hosts=rs0/localhost:27017 # <3>
-cdc.debezium.mongodb.name=dbserver1 # <3>
-cdc.debezium.mongodb.user=debezium # <3>
-cdc.debezium.mongodb.password=dbz # <3>
-cdc.debezium.database.whitelist=inventory # <3>
+debezium.inner.mongodb.hosts=rs0/localhost:27017 # <3>
+debezium.inner.mongodb.name=dbserver1 # <3>
+debezium.inner.mongodb.user=debezium # <3>
+debezium.inner.mongodb.password=dbz # <3>
+debezium.inner.database.whitelist=inventory # <3>
 
-cdc.debezium.tasks.max=1 # <4>
+debezium.inner.tasks.max=1 # <4>
 
-cdc.debezium.schema=true # <5>
-cdc.debezium.key.converter.schemas.enable=true # <5>
-cdc.debezium.value.converter.schemas.enable=true # <5>
+debezium.inner.schema=true # <5>
+debezium.inner.key.converter.schemas.enable=true # <5>
+debezium.inner.value.converter.schemas.enable=true # <5>
 
-cdc.debezium.transforms=unwrap # <6>
-cdc.debezium.transforms.unwrap.type=io.debezium.transforms.ExtractNewRecordState # <6>
-cdc.debezium.transforms.unwrap.add.fields=name,db # <6>
-cdc.debezium.transforms.unwrap.delete.handling.mode=none # <6>
-cdc.debezium.transforms.unwrap.drop.tombstones=true # <6>
+debezium.inner.transforms=unwrap # <6>
+debezium.inner.transforms.unwrap.type=io.debezium.transforms.ExtractNewRecordState # <6>
+debezium.inner.transforms.unwrap.add.fields=name,db # <6>
+debezium.inner.transforms.unwrap.delete.handling.mode=none # <6>
+debezium.inner.transforms.unwrap.drop.tombstones=true # <6>
 ----
 
 <1> Configures `Debezium Source` to use https://debezium.io/docs/connectors/mongodb/[MongoDB Connector].
@@ -289,22 +289,22 @@ Use following properties to connect the Debezium Source to SQLServer:
 
 [source,properties]
 ----
-cdc.debezium.connector.class=io.debezium.connector.sqlserver.SqlServerConnector # <1>
+debezium.inner.connector.class=io.debezium.connector.sqlserver.SqlServerConnector # <1>
 
-cdc.debezium.database.history=io.debezium.relational.history.MemoryDatabaseHistory # <2>
-cdc.debezium.schema.history.internal=io.debezium.relational.history.MemorySchemaHistory # <2>
-cdc.debezium.offset.storage=org.apache.kafka.connect.storage.MemoryOffsetBackingStore # <2>
+debezium.inner.database.history=io.debezium.relational.history.MemoryDatabaseHistory # <2>
+debezium.inner.schema.history.internal=io.debezium.relational.history.MemorySchemaHistory # <2>
+debezium.inner.offset.storage=org.apache.kafka.connect.storage.MemoryOffsetBackingStore # <2>
 
-cdc.debezium.topic.prefix=my-topic # <3>
-cdc.debezium.name=my-connector # <3>
-cdc.debezium.database.server.id=85744 # <3>
-cdc.debezium.database.server.name=my-app-connector # <3>
+debezium.inner.topic.prefix=my-topic # <3>
+debezium.inner.name=my-connector # <3>
+debezium.inner.database.server.id=85744 # <3>
+debezium.inner.database.server.name=my-app-connector # <3>
 
-cdc.debezium.database.user=sa  # <4>
-cdc.debezium.database.password=Password! # <4>
-cdc.debezium.database..dbname=testDB # <4>
-cdc.debezium.database.hostname=localhost # <4>
-cdc.debezium.database.port=1433 # <4>
+debezium.inner.database.user=sa  # <4>
+debezium.inner.database.password=Password! # <4>
+debezium.inner.database..dbname=testDB # <4>
+debezium.inner.database.hostname=localhost # <4>
+debezium.inner.database.port=1433 # <4>
 ----
 
 <1> Configures `Debezium Source` to use https://debezium.io/docs/connectors/sqlserver/[SqlServerConnector].
@@ -336,7 +336,7 @@ samples coming soon ...
 
 [source,shell]
 ----
-java -jar debezium-source2.jar --cdc.debezium.connector.class=io.debezium.connector.mysql.MySqlConnector --cdc.debezium.topic.prefix=my-topic --cdc.debezium.name=my-connector --cdc.debezium.database.server.id=85744 --cdc.debezium.database.server.name=my-app-connector  --cdc.debezium.database.server.id=85744 --cdc.debezium.database.server.name=my-app-connector --cdc.debezium.database.user=debezium --cdc.debezium.database.password=dbz --cdc.debezium.database.hostname=localhost --cdc.debezium.database.port=3306 --cdc.debezium.database.history=io.debezium.relational.history.MemoryDatabaseHistory --cdc.debezium.schema.history.internal=io.debezium.relational.history.MemorySchemaHistory --cdc.debezium.offset.storage=org.apache.kafka.connect.storage.MemoryOffsetBackingStore
+java -jar debezium-source2.jar --debezium.inner.connector.class=io.debezium.connector.mysql.MySqlConnector --debezium.inner.topic.prefix=my-topic --debezium.inner.name=my-connector --debezium.inner.database.server.id=85744 --debezium.inner.database.server.name=my-app-connector  --debezium.inner.database.server.id=85744 --debezium.inner.database.server.name=my-app-connector --debezium.inner.database.user=debezium --debezium.inner.database.password=dbz --debezium.inner.database.hostname=localhost --debezium.inner.database.port=3306 --debezium.inner.database.history=io.debezium.relational.history.MemoryDatabaseHistory --debezium.inner.schema.history.internal=io.debezium.relational.history.MemorySchemaHistory --debezium.inner.offset.storage=org.apache.kafka.connect.storage.MemoryOffsetBackingStore
 ----
 
 
